--- a/styles/style.css
+++ b/styles/style.css
@@ -19,10 +19,11 @@ body{
 }
 
 .bg {
-  width: 100%;
+  /* width: 1440px; */
+  /* height: 1056px; */
   background: url(../images/pattern-background-desktop.svg) no-repeat;
-  background-position: center;
-  background-size: cover;
+  /* background-position: center; */
+  /* background-size: cover; */
 }
 
 .container {
@@ -142,6 +143,21 @@ body{
   cursor: pointer;
 }
 
+.btn-payment:hover {
+  background-color: var(--desaturated-blue);
+}
+
+.plans>button:hover {
+  text-decoration: none;
+  font-weight: bold;
+  color: var(--bright-blue);
+}
+
+.btn-cancel:hover {
+  font-weight: bold;
+  color: var(--dark-blue);
+}
+
 .attribution {
   text-align: center;
 }
@@ -149,9 +165,6 @@ body{
 @media (max-width: 720px) {
   .card {
     width: 100%;
-  }
-  .buttons {
-    flex-wrap: wrap;
   }
   .bg {
     background: url(../images/pattern-background-mobile.svg) no-repeat;
